# email-triage-env

./: .dockerignore  Dockerfile  README.md  body.json  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
envs/email_triage_env/: __init__.py  client.py  environment.py  models.py  tasks.py
server/: app.py
tests/: test_environment.py
