[project]
name = "email-triage-env"
version = "1.0.0"
description = "OpenEnv email triage environment for AI agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
python_files = "tests/*.py"
